fix after reviews
